welcome.lessons.welcome.bat.bool2.TeenSum.scala.error
teenSum:2: error: '<-' expected but ')' found.
	if  ( for ( ( a<=19 && a>=13 ) ||  ( b<=19 && b>=13 ))) {
                                                             ^teenSum:6: error: illegal start of simple expression
}
^