welcome.lessons.welcome.bat.bool2.TeenSum.scala.code
def teenSum(a:Int, b:Int):Int = {
	if  ( for ( ( a<=19 && a>=13 ) ||  ( b<=19 && b>=13 ))) {
		return 19
	}
	else { return a+b }
}
